# rosemary-memory

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
examples/: basic_agent.py  example_data_extract.yaml  frontier_profile_import.py
scripts/: init_age.sql  start.sh  test_e2e.sh
src/rosemary_memory/: __init__.py  cli.py  config.py  embeddings_service.py
src/rosemary_memory/agents/: __init__.py  default.py
src/rosemary_memory/memory/: __init__.py  embeddings.py  export.py  insights.py  store.py
src/rosemary_memory/memory/graphs/: __init__.py  insight.py  interaction.py  query.py
src/rosemary_memory/memory/retrieval/: __init__.py  retrieve.py
src/rosemary_memory/memory/update/: __init__.py  update.py
src/rosemary_memory/models/: __init__.py  openai.py
src/rosemary_memory/storage/: __init__.py  age.py
src/rosemary_memory/tools/: __init__.py  memory_tools.py
tests/: docker-compose.test.yml  test_cli_smoke.py  test_e2e.sh  test_memory_roundtrip.py
