[project]
name = "rosemary-memory"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rosemary", email = "hello@mini-agi.com" }]
dependencies = [
  "smolagents[openai]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "python-dotenv",
  "sentence-transformers",
  "fastapi",
  "uvicorn",
  "httpx",
]

[project.urls]
Homepage = ""

[project.scripts]
rosemary-memory = "rosemary_memory.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosemary_memory"]
